# pisgah-fogel.github.io

./: index.html  md_to_html.pl  styles.css  tutorial.html  tutorial.md
random/: 3d_ride_plot.py  Elite_super_chrono_power_fluid.py  activity_4484818643.tcx  bikecalculator.js  bikecalculator.py
random/3d_map/: Makefile  dependency.md  main.cpp
random/3d_map_irrlicht/: MyEventReceiver.h  main.cpp  roadSampleSceneNode.h
random/3d_map_ogre/: CMakeLists.txt
random/cycling_virtual_coach/: package-lock.json  package.json
random/cycling_virtual_coach/src/: App.css  App.js
random/pycyclinggraph/: main.py
secpil/: SecPil.html  SecPil.pck
smallworld3d/: SmallWorld3D.html
therobotcardgame/: TheRobotCarGame.html  TheRobotCarGame.pck
